--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="header">
             <div class="contact-links">
                 <a href="https://linktr.ee/tranthanhhthao" target="_blank">linktr.ee/tranthanhhthao</a>
-                <a href="mailto:someone@example.com">email@swb.edu.vn</a>
+                <a href="mailto:someone@example.com">105271681@student.swin.edu.au</a>
             </div>
 
             <div class="myname">
