--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="term"><span>summer</span><span>2024</span></div>
 
             <div class="course">
-                <p><a href="">Intro to Media Studies</a></p>
-                <p><a href="">Media Content Creation</a></p>
+                <p><a href="">Global Media Industries</a></p>
+                <p><a href="">Marketing and Consumer Experience</a></p>
             </div>
         </section>
 
