--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   </head>
   <body>
     <main>
+        <img id="emoji-email" class="emoji" src="files/incoming-envelope_1f4e8.png" alt="">
+
         <section class="header">
             <div class="contact-links">
-                <a href="https://linktr.ee/tranthanhhthao" target="_blank">linktr.ee/tranthanhhthao</a>
-                <a href="mailto:someone@example.com">105271681@student.swin.edu.au</a>
+                <a id="linktree" href="https://linktr.ee/tranthanhhthao" target="_blank">linktr.ee/tranthanhhthao</a>
+                <a id="email" href="mailto:someone@example.com">105271681@student.swin.edu.au</a>
             </div>
 
             <div class="myname">
@@ -42,16 +44,42 @@
         <section class="uni-projects">
             <h2>uni projects</h2>
 
-            <div class="term"><span>summer</span><span>2024</span></div>
+            <div class="term">
+                <span>summer</span><span>2024</span>
+
+                <div class="class">
+                    <input type="checkbox" id="2024GMI">
+                    <label for="2024GMI">Global Media Industries</label>
+                    <ul class="asm-list">
+                        <li><a href="#" target="_blank" title="first assignment 50/100 ouch!">I Can't Be Without Counterculture</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="rgb(218, 39, 39)"><path d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h224.61v40H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v510.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-224.61h40v224.61q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Zm164.92-201.23-28.31-28.31L731.69-760H560v-40h240v240h-40v-171.69L389.54-361.23Z"/></svg>
+                        </li>
+                        <li><a href="#" target="_blank">Vedan Commerical Adaptation</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="rgb(218, 39, 39)"><path d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h224.61v40H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v510.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-224.61h40v224.61q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Zm164.92-201.23-28.31-28.31L731.69-760H560v-40h240v240h-40v-171.69L389.54-361.23Z"/></svg>
+                        </li>
+                    </ul>
+                </div>
+                <div class="class">
+                    <input type="checkbox" id="2024MKT">
+                    <label for="2024MKT">Marketing and Consumer Experience</label>
+                    <ul class="asm-list">
+                        <li><a href="#" target="_blank" title="74.3/100">Marketing is...</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="rgb(218, 39, 39)"><path d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h224.61v40H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v510.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-224.61h40v224.61q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Zm164.92-201.23-28.31-28.31L731.69-760H560v-40h240v240h-40v-171.69L389.54-361.23Z"/></svg>
+                        </li>
+                        <li><a href="#" target="_blank" title="73/100">Blackmores Brand Report</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="rgb(218, 39, 39)"><path d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h224.61v40H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v510.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-224.61h40v224.61q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Zm164.92-201.23-28.31-28.31L731.69-760H560v-40h240v240h-40v-171.69L389.54-361.23Z"/></svg>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
             <div class="course">
-                <p><a href="">Global Media Industries</a></p>
-                <p><a href="">Marketing and Consumer Experience</a></p>
+                
             </div>
         </section>
 
         <section class="footer">
-            <p>Last update in March 2024.</p>
+            <p>Last update in August 2024.</p>
         </section>
     </main>
 	<script src="app.js"></script>
