--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <title>thao s-winner</title>
+    <title>thao swinburne</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="#" type="image/x-icon">
   </head>
   <body>
     <main>
-        <img id="emoji-email" class="emoji" src="files/incoming-envelope_1f4e8.png" alt="">
+        <img id="emoji-email" class="emoji" src="files/icons/incoming-envelope_1f4e8.png" alt="">
 
         <section class="header">
             <div class="contact-links">
@@ -51,7 +51,7 @@
                     <input type="checkbox" id="2024GMI">
                     <label for="2024GMI">Global Media Industries</label>
                     <ul class="asm-list">
-                        <li><a href="#" target="_blank" data-grade="50/100">I Can't Be Without Counterculture</a>
+                        <li><a href="files/asm/my media consumption_tranthanhhthao.pdf" target="_blank" data-grade="50/100">I Can't Be Without Counterculture</a>
                             <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="rgb(218, 39, 39)"><path d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h224.61v40H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v510.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-224.61h40v224.61q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Zm164.92-201.23-28.31-28.31L731.69-760H560v-40h240v240h-40v-171.69L389.54-361.23Z"/></svg>
                         </li>
                         <li><a href="#" target="_blank">Vedan Commerical Adaptation</a>
@@ -63,14 +63,14 @@
                     <input type="checkbox" id="2024MKT">
                     <label for="2024MKT">Marketing and Consumer Experience</label>
                     <ul class="asm-list">
-                        <li>                            
+                        <!-- <li>                            
                             <a href="#" target="_blank" title="74.3/100" data-grade="74.3/100">Marketing is...</a>
                             <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="rgb(218, 39, 39)"><path d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h224.61v40H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v510.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-224.61h40v224.61q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Zm164.92-201.23-28.31-28.31L731.69-760H560v-40h240v240h-40v-171.69L389.54-361.23Z"/></svg>
-                        </li>
-                        <li><a href="#" target="_blank" data-grade="73/100">Blackmores Brand Report</a>
+                        </li> -->
+                        <li><a href="files/asm/BLACKMORES_tranthanhhthao.pdf" target="_blank" data-grade="73/100">Blackmores Brand Report</a>
                             <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="rgb(218, 39, 39)"><path d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h224.61v40H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v510.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-224.61h40v224.61q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Zm164.92-201.23-28.31-28.31L731.69-760H560v-40h240v240h-40v-171.69L389.54-361.23Z"/></svg>
                         </li>
-                        <li><a href="#" target="_blank" data-grade="">MultiMin New Product</a>
+                        <li><a href="files/asm/MultiMin-happysquad.pdf" target="_blank" data-grade="">MultiMin New Product</a>
                             <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px" fill="rgb(218, 39, 39)"><path d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h224.61v40H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v510.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-224.61h40v224.61q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Zm164.92-201.23-28.31-28.31L731.69-760H560v-40h240v240h-40v-171.69L389.54-361.23Z"/></svg>
                         </li>
                     </ul>
