--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <title>thao swinburne</title>
+    <title>thảo swinburne</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="#" type="image/x-icon">
+    <link rel="icon" href="files/icons/iconlogo.png" type="image/x-icon">
   </head>
   <body>
     <main>
