--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
   </head>
   <body>
     <main>
-        <img id="emoji-email" class="emoji" src="files/icons/incoming-envelope_1f4e8.png" alt="">
 
         <section class="header">
             <div class="contact-links">
-                <a id="linktree" href="https://linktr.ee/tranthanhhthao" target="_blank">linktr.ee/tranthanhhthao</a>
-                <a id="email" href="mailto:someone@example.com">105271681@student.swin.edu.au</a>
+                <div class="info-link">
+                    <a id="linktree" href="https://linktr.ee/tranthanhhthao" target="_blank">linktr.ee/tranthanhhthao</a>
+                    <img id="emoji-linktree" class="emoji" src="files/icons/evergreen-tree_1f332.png" alt=""> 
+                </div>
+                
+                <div class="info-link">
+                    <a id="email" href="mailto:someone@example.com">105271681@student.swin.edu.au</a>
+                    <img id="emoji-email" class="emoji" src="files/icons/incoming-envelope_1f4e8.png" alt=""> 
+                </div>
             </div>
 
             <div class="myname">
