--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@
   <body>
     <main>
 
+        <section>
+            <a class="contact" href="mailto:105271681@student.swin.edu.au" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/></svg>
+            <!-- <img id="emoji-email" src="files/icons/incoming-envelope_1f4e8.png" alt=""> -->
+            </a>
+        </section>
+
         <section class="header">
             <div class="contact-links">
-                <div class="info-link">
+                <!-- <div class="info-link">
                     <a id="linktree" href="https://linktr.ee/tranthanhhthao" target="_blank">linktr.ee/tranthanhhthao</a>
                     <img id="emoji-linktree" class="emoji" src="files/icons/evergreen-tree_1f332.png" alt=""> 
-                </div>
+                </div> -->
                 
+                <!-- 105271681@student.swin.edu.au -->
                 <div class="info-link">
-                    <a id="email" href="mailto:someone@example.com">105271681@student.swin.edu.au</a>
+                    <a id="email" href="mailto:105271681@student.swin.edu.au">105271681@student.swin.edu.au</a>
                     <img id="emoji-email" class="emoji" src="files/icons/incoming-envelope_1f4e8.png" alt=""> 
                 </div>
             </div>
@@ -89,7 +97,7 @@
         </section>
 
         <section class="footer">
-            <p>Last update in August 2024.</p>
+            <p><a href="https://linktr.ee/tranthanhhthao" target="_blank">thảo</a> last updated in August 2024.</p>
         </section>
     </main>
 	<script src="app.js"></script>
