--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 <body>
 
     <div class="app">
+        
+        <div class="button-wrapper">
+            <a class="nav email" id="click-contact" href="#">Get in Touch</a>
+        </div>
 
-        <a class="nav email" id="click-contact" href="#">Get in Touch</a>
-        <a class="nav projects" id="click-projects" href="#">uni projects</a>
+        <div class="button-wrapper">
+            <a class="nav projects" id="click-projects" href="#">uni projects</a>
+        </div>
 
         <div class="mask">
             <section class="preload"></section>
