--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
 
     <div class="app">
+
+        <div class="debugger"></div>
         
         <div class="button-wrapper">
             <a class="nav email" id="click-contact" href="#">Get in Touch</a>
